force-app/main/default/objects/Apttus__AgreementInsight__c/Apttus__AgreementInsight__c.object-meta.xml
<CustomObject>
    <description>Store all the Insight related data of an agreement</description>
    <label>Agreement Insights</label>
    <nameField>
        <label>Agreement Insight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>