force-app/main/default/objects/Apttus__AgreementInsight__c/fields/Apttus__AgreementId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AgreementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agreement Id on which the Insight rating is defined</description>
    <inlineHelpText>Agreement Id on which the Insight rating is defined</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Agreement Insights</relationshipLabel>
    <relationshipName>AgreementInsights</relationshipName>
    <type>Lookup</type>
</CustomField>