force-app/main/default/objects/Apttus__AgreementInsight__c/fields/Apttus__CalculationCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus__CalculationCriteria__c</fullName>
    <description>Displays the formula for the calculation done on the defined criteria</description>
    <inlineHelpText>Displays the formula for the calculation done on the defined criteria</inlineHelpText>
    <label>Calculation Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>