force-app/main/default/objects/Apttus__AgreementInsight__c/fields/Apttus__CalculationCriteriaResults__c.field-meta.xml
<CustomField>
    <fullName>Apttus__CalculationCriteriaResults__c</fullName>
    <description>Displays the calculated values on which the criteria was satisfied</description>
    <inlineHelpText>Displays the calculated values on which the criteria was satisfied</inlineHelpText>
    <label>Calculation Criteria Results</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>