force-app/main/default/objects/Apttus__AgreementInsight__c/fields/Apttus__ContentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ContentId__c</fullName>
    <description>Content Id of the document</description>
    <inlineHelpText>Content Id of the document</inlineHelpText>
    <label>Content Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>