force-app/main/default/objects/Apttus__AgreementInsight__c/fields/Apttus__Criteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Criteria__c</fullName>
    <description>Criteria for deriving the risk score on the insight</description>
    <inlineHelpText>Criteria for deriving the risk score on the insight</inlineHelpText>
    <label>Criteria Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>