force-app/main/default/objects/Apttus__AgreementInsight__c/fields/Apttus__CriteriaFieldValues__c.field-meta.xml
<CustomField>
    <fullName>Apttus__CriteriaFieldValues__c</fullName>
    <description>Displays the existing values for the criteria fields</description>
    <inlineHelpText>Displays the existing values for the criteria fields</inlineHelpText>
    <label>Criteria Field Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>