force-app/main/default/objects/Apttus__AgreementInsight__c/fields/Apttus__DocumentVersionDetailId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentVersionDetailId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Document Version on which the Insight rating is defined</description>
    <inlineHelpText>Document Version on which the Insight rating is defined</inlineHelpText>
    <label>Document Version Detail</label>
    <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
    <relationshipLabel>Agreement Insights</relationshipLabel>
    <relationshipName>AgreementInsights</relationshipName>
    <type>Lookup</type>
</CustomField>