force-app/main/default/objects/Apttus__AgreementInsight__c/fields/Apttus__Guidance__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Guidance__c</fullName>
    <description>Guidance of the Insight</description>
    <inlineHelpText>Guidance of the Insight</inlineHelpText>
    <label>Guidance</label>
    <type>TextArea</type>
</CustomField>