force-app/main/default/objects/Apttus__AgreementInsight__c/fields/Apttus__IndividualRiskScore__c.field-meta.xml
<CustomField>
    <fullName>Apttus__IndividualRiskScore__c</fullName>
    <description>Individual Risk Score</description>
    <formula>IF( NOT(ISNULL(Apttus__Rating__c)) &amp;&amp; NOT(ISBLANK(Apttus__RatingIconPath__c)) &amp;&amp; NOT(ISBLANK(Apttus__RatingLevel__c )), IMAGE(Apttus__RatingIconPath__c, &quot;&quot;) + &apos; &apos; + TEXT(Apttus__Rating__c) +&apos; (&apos; + Apttus__RatingLevel__c + &apos;)&apos; , &apos;&apos;)</formula>
    <inlineHelpText>Individual Risk Score</inlineHelpText>
    <label>Individual Risk Score</label>
    <type>Text</type>
</CustomField>