force-app/main/default/objects/Apttus__AgreementInsight__c/fields/Apttus__IsValid__c.field-meta.xml
<CustomField>
    <fullName>Apttus__IsValid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Validity of the Insight</description>
    <inlineHelpText>Validity of the Insight</inlineHelpText>
    <label>Is Valid</label>
    <type>Checkbox</type>
</CustomField>