force-app/main/default/objects/Apttus__AgreementInsight__c/fields/Apttus__Rating__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Rating__c</fullName>
    <description>Rating of the Insight</description>
    <inlineHelpText>Rating of the Insight</inlineHelpText>
    <label>Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>