force-app/main/default/objects/Apttus__AgreementInsight__c/fields/Apttus__RatingIconPath__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RatingIconPath__c</fullName>
    <description>Rating Icon Path</description>
    <inlineHelpText>Rating Icon Path</inlineHelpText>
    <label>Rating Icon Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>