force-app/main/default/objects/Apttus__AgreementInsight__c/fields/Apttus__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Type__c</fullName>
    <description>Type of the Insight/Provision Name</description>
    <inlineHelpText>Type of the Insight/Provision Name</inlineHelpText>
    <label>Type</label>
    <type>TextArea</type>
</CustomField>